fixed weird spacing between request form and bottom of page

--- a/idv/static/css/style.css
+++ b/idv/static/css/style.css
@@ -62,6 +62,7 @@ h4 {
 
 .white-bg {
   background-color:#fff;
+  margin-bottom: -20px;
 }
 
 /* Buttons */
